Revert "Bmoric/cron long running jobs" (#10276)
