# airbyte-workload-api-server/src/main/kotlin/io/airbyte/workload/api/domain/LongRunningWorkloadRequest.kt
@@ -1,8 +1,0 @@
-package io.airbyte.workload.api.domain
-
-import java.time.OffsetDateTime
-
-data class LongRunningWorkloadRequest(
-  var dataplane: List<String>? = null,
-  var createdBefore: OffsetDateTime? = null,
-)
