# airbyte-workload-api-server/src/main/kotlin/io/airbyte/workload/handler/WorkloadHandler.kt
@@ -44,10 +44,4 @@ interface WorkloadHandler {
   fun setWorkloadStatusToRunning(workloadId: String)
 
   fun heartbeat(workloadId: String)
-
-  fun getWorkloadsRunningCreatedBefore(
-    dataplaneId: List<String>?,
-    workloadType: List<ApiWorkloadType>?,
-    createdBefore: OffsetDateTime?,
-  ): List<Workload>
 }
